crates/pg_syntax/tests/snapshots/postgres_regress/json@147.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select json_extract_path_text('{\"f2\":{\"f3\":1},\"f4\":{\"f5\":99,\"f6\":\"stringy\"}}','f4','f6');"
---
SelectStmt@0..89
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..87
    FuncCall@7..87
      Ident@7..29 "json_extract_path_text"
      Ascii40@29..30 "("
      AConst@30..77
        Sconst@30..77 "'{\"f2\":{\"f3\":1},\"f4\": ..."
      Ascii44@77..78 ","
      AConst@78..82
        Sconst@78..82 "'f4'"
      Ascii44@82..83 ","
      AConst@83..87
        Sconst@83..87 "'f6'"
  Ascii41@87..88 ")"
  Ascii59@88..89 ";"

