crates/pg_syntax/tests/snapshots/postgres_regress/json@152.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select json_extract_path_text('{\"f2\":{\"f3\":1},\"f4\":{\"f5\":null,\"f6\":\"stringy\"}}','f4','f5') is null as expect_true;"
---
SelectStmt@0..114
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..113
    NullTest@7..98
      FuncCall@7..89
        Ident@7..29 "json_extract_path_text"
        Ascii40@29..30 "("
        AConst@30..79
          Sconst@30..79 "'{\"f2\":{\"f3\":1},\"f4\": ..."
        Ascii44@79..80 ","
        AConst@80..84
          Sconst@80..84 "'f4'"
        Ascii44@84..85 ","
        AConst@85..89
          Sconst@85..89 "'f5'"
      Ascii41@89..90 ")"
      Whitespace@90..91 " "
      Is@91..93 "is"
      Whitespace@93..94 " "
      NullP@94..98 "null"
    Whitespace@98..99 " "
    As@99..101 "as"
    Whitespace@101..102 " "
    Ident@102..113 "expect_true"
  Ascii59@113..114 ";"

