crates/pg_syntax/tests/snapshots/postgres_regress/json@156.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '{\"f2\":{\"f3\":1},\"f4\":{\"f5\":99,\"f6\":\"stringy\"}}'::json#>array['f2'];"
---
SelectStmt@0..74
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..72
    AExpr@7..72
      TypeCast@7..60
        AConst@7..54
          Sconst@7..54 "'{\"f2\":{\"f3\":1},\"f4\": ..."
        Typecast@54..56 "::"
        TypeName@56..60
          Ident@56..60 "json"
      Op@60..62 "#>"
      AArrayExpr@62..72
        Array@62..67 "array"
        Ascii91@67..68 "["
        AConst@68..72
          Sconst@68..72 "'f2'"
  Ascii93@72..73 "]"
  Ascii59@73..74 ";"

