crates/pg_syntax/tests/snapshots/postgres_regress/json@159.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '{\"f2\":{\"f3\":1},\"f4\":{\"f5\":99,\"f6\":\"stringy\"}}'::json#>>array['f4','f6'];"
---
SelectStmt@0..80
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..78
    AExpr@7..78
      TypeCast@7..60
        AConst@7..54
          Sconst@7..54 "'{\"f2\":{\"f3\":1},\"f4\": ..."
        Typecast@54..56 "::"
        TypeName@56..60
          Ident@56..60 "json"
      Op@60..63 "#>>"
      AArrayExpr@63..78
        Array@63..68 "array"
        Ascii91@68..69 "["
        AConst@69..73
          Sconst@69..73 "'f4'"
        Ascii44@73..74 ","
        AConst@74..78
          Sconst@74..78 "'f6'"
  Ascii93@78..79 "]"
  Ascii59@79..80 ";"

